--- a/Front-End/HTML/Ödev - 2/index.html
+++ b/Front-End/HTML/Ödev - 2/index.html
@@ -38,7 +38,7 @@
     </ol>
     <h1>Sevdiğim Filmler</h1>
     <h2>Tabikide One Piece</h2>
-    <a href="https://www.imdb.com/title/tt0388629/"><img style="height: auto;max-width: 300px; width: auto") src="src/op.jpg"></a>
+    <a href="https://www.imdb.com/title/tt0388629/"><img style="height: auto; max-width: 300px; width: auto" alt="One Piece Image" src="src/op.jpg"></a>
     <p>Plot Armor sayesinde bayağı güçlü arkadaşımız herşeye tek atıyor ve bu durumdan hiç şaşmıyor.</p>
 </body>
 </html>
