--- a/Front-End/Fimple/Ödev 1/index.html
+++ b/Front-End/Fimple/Ödev 1/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div class="body">
-        <div class="left">Left</div>
+        <div class="left">
+            <form>
+                <label for="ftitle">Başlık</label>
+                <input type="text" id="ftitle" name="ftitle" placeholder="Başlık">
+                <br>
+                <label for="fcompleted">Tamamlandı</label>
+                <input type="checkbox" id="fcompleted" name="fcompleted">
+            </form>
+        </div>
         <div class="right">Right</div>
     </div>
 </body>
