Validate Forms, Submit Button

--- a/Front-End/Fimple/Ödev 1/index.html
+++ b/Front-End/Fimple/Ödev 1/index.html
@@ -9,12 +9,14 @@
 <body>
     <div class="body">
         <div class="left">
-            <form>
+            <form id="formSubmit">
                 <label for="ftitle">Başlık</label>
                 <input type="text" id="ftitle" name="ftitle" placeholder="Başlık">
                 <br>
                 <label for="fcompleted">Tamamlandı</label>
                 <input type="checkbox" id="fcompleted" name="fcompleted">
+                <br>
+                <input type="submit">
             </form>
         </div>
         <div class="right">Right</div>
