Strikethrough and loading

--- a/Front-End/Fimple/Ödev 1/index.html
+++ b/Front-End/Fimple/Ödev 1/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Fimple Ödevi</title>
-    <script src="js.js" defer></script>
+    <script type="module" src="js.js" defer></script>
+    <script type="module" src="loading.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
