--- a/Front-End/Fimple/Ödev 2/index.html
+++ b/Front-End/Fimple/Ödev 2/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header"></div>
-        <input class="search" type="text">
-    <div class="body"></div>
+    <div class="header">
+        <input class="search" placeholder="Search" type="text">
+    </div>
+    <div class="bodyy"></div>
 </body>
 </html>
